# misp

./: README.md  ffmpeg.py  process.py  pyproject.toml  test-recipe.yaml
mods/ffmpeg/: main.py
mods/ffprobe/: main.py
src/mmisp/: process.py
src/mmisp/modules/ffmpeg/: main.py
tests/: process.py
