[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmisp"
version = "0.1.1"
authors = [
  { name="Ivan Peevski", email="cyberhorse@gmail.com" },
]
description = "A package to deal with multimedia processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ipeevski/misp"
"Bug Tracker" = "https://github.com/ipeevski/misp/issues"
